--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-    <div id="chartContainer" style="height:100%; width: 100%;"></div>
+    <div id="chartContainer" style="height:100%; width: 100%; border:0px; margin:0px;" ></div>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script>
         var symbol = "R_50";
@@ -27,12 +27,12 @@
             axisY: {
                 gridDashType: "dot",
                 gridThickness: 1,
-                labelFontSize: 10
+                labelFontSize: 12
             },
             axisX: {
                 gridDashType: "dot",
                 gridThickness: 0,
-                labelFontSize: 10
+                labelFontSize: 12
             }
         });
 
@@ -40,7 +40,7 @@
         var xval = 1;
         var yval = 1;
 
-        function drawOddEven(yv, dg, color) {
+        function drawOddEven(yv, dg, mcolor,lcolor) {
             if (dg % 2 == 0) {
                 yval += yv;
             } else {
@@ -52,11 +52,11 @@
                 y: yval,
                 indexLabel: dg,
                 indexLabelFontWeight: "bold",
-                indexLabelFontSize: 14,
-                indexLabelFontColor: color,
-                markerSize: 8,
+                indexLabelFontSize: 16,
+                indexLabelFontColor: lcolor,
+                markerSize: 6,
                 markerType: "circle",
-                markerColor: color,
+                markerColor: mcolor,
                 // lineColor: "green",
             });
             xval += 1;
@@ -74,29 +74,29 @@
 
             if (digit % 2 == 0) {
                 if (digit == 0) {
-                    drawOddEven(1, digit, "#008c20");
+                    drawOddEven(1, digit, "#55af11", "#008c20");
                 } else if (digit == 2) {
-                    drawOddEven(2, digit, "#008c20");
+                    drawOddEven(2, digit, "#55af11", "#008c20");
                 } else if (digit == 4) {
-                    drawOddEven(3, digit, "#008c20");
+                    drawOddEven(3, digit, "#55af11", "#008c20");
                 } else if (digit == 6) {
-                    drawOddEven(4, digit, "#008c20");
+                    drawOddEven(4, digit, "#55af11", "#008c20");
                 } else if (digit == 8) {
-                    drawOddEven(5, digit, "#008c20");
+                    drawOddEven(5, digit, "#55af11", "#008c20");
                 }
 
             } else {
                 if (digit == 1) {
-                    drawOddEven(1, digit, "red");
+                    drawOddEven(1, digit,"#f95734", "red");
                 } else if (digit == 3) {
-                    drawOddEven(2, digit, "red");
+                    drawOddEven(2, digit,"#f95734", "red");
                 }
                 else if (digit == 5) {
-                    drawOddEven(3, digit, "red");
+                    drawOddEven(3, digit,"#f95734", "red");
                 } else if (digit == 7) {
-                    drawOddEven(4, digit, "red");
+                    drawOddEven(4, digit,"#f95734", "red");
                 } else if (digit == 9) {
-                    drawOddEven(5, digit, "red");
+                    drawOddEven(5, digit,"#f95734", "red");
                 }
             }
         }
