--- a/EO Trends Chart.html
+++ b/EO Trends Chart.html
@@ -6,8 +6,8 @@
     <div id="chartContainer" style="height:100%; width: 100%;"></div>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script>
-        var symbol = "R_50";
-        var decimals = 4;
+        var symbol = "R_100";
+        var decimals = 2;
         var ws = new WebSocket('wss://ws.binaryws.com/websockets/v3?app_id=1089');
 
         ws.onopen = function (evt) {
@@ -18,21 +18,25 @@
         var dps = [];
         var dataLength = 60;
         var chart = new CanvasJS.Chart("chartContainer", {
-            theme: "light1", // "light1", "light2", "dark1", "dark2"
+            theme: "light2", // "light1", "light2", "dark1", "dark2"
             animationEnabled: true,
+            backgroundColor: "#020d1c",
             data: [{
                 type: "line",
                 dataPoints: dps
             }],
             axisY:{
                 gridDashType: "dot",
-                gridThickness: 1,
-                labelFontSize: 10
+                gridColor: "white",
+                gridThickness: 0.4,
+                labelFontSize: 12
             },
             axisX:{
                 gridDashType: "dot",
-                gridThickness: 0,
-                labelFontSize: 10
+                gridThickness: 0.4,
+                labelFontSize: 12,
+                tickColor: "#293F56",
+                lineColor:"#293F56"
             }
         });
 
@@ -54,11 +58,14 @@
                     y: yval,
                     indexLabel: digit,
                     indexLabelFontWeight: "bold",
-                    indexLabelFontSize: 14,
+                    indexLabelFontSize: 16,
                     indexLabelFontColor: "#008c20",
-                    markerSize: 8,
+                    markerSize: 6,
                     markerType: "circle",
                     markerColor: "#008c20",
+                    lineColor: "#3399ff", 
+                lineDashType: "shortDot",
+                lineThickness: 0.3
                    // lineColor: "green",
                 });
                 xval += 1;
@@ -74,11 +81,14 @@
                     y: yval,
                     indexLabel: digit,
                     indexLabelFontWeight: "bold",
-                    indexLabelFontSize: 14,
+                    indexLabelFontSize: 16,
                     indexLabelFontColor: "red",
-                    markerSize: 8,
+                    markerSize: 6,
                     markerType: "circle",
                     markerColor: "red",
+                    lineColor: "#3399ff", 
+                lineDashType: "shortDot",
+                lineThickness: 0.3
                    // lineColor: "red",
                 });
                 xval += 1;
