--- a/index.html
+++ b/index.html
@@ -1,9 +1,74 @@
 <head>
-    <title>EO Volume Chart V100</title>
+    <title>EO Chart Defi V100</title>
+    <style>
+        html,
+        * {
+            padding: 0px;
+        }
+
+        body {
+            overflow: hidden;
+            /*background-color: #021624;
+            background-color: #041220;*/
+            background-color: #020d1c;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: row;
+
+        }
+
+        #squareifr {
+            position: absolute;
+            width: 106px;
+            display: flex;
+            justify-content: right;
+            right: 0px;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            border: 0px;
+            top: 0px;
+        }
+        #groupifr {
+            position: absolute;
+            width: 48px;
+            display: flex;
+            justify-content: right;
+            right: 100px;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            border: 0px;
+            top: 0px;
+        }
+/*
+ #graphContainer {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            right: 132px;
+            width: 100%;
+        }*/
+        #chartContainer { 
+            width: 100%;
+            height: 100%; 
+            position: absolute;
+            right: 138px;
+        } 
+    </style>
 </head>
 
 <body>
-    <div id="chartContainer" style="height:100%; width: 100%; border:0px; margin:0px;" ></div>
+    <div class="container"> 
+        <div id="chartContainer"></div>
+        <iframe id="groupifr" src="https://faus1000.github.io/groupsview/"></iframe>
+        <iframe id="squareifr" src="https://faus1000.github.io/squareview/"></iframe>
+        <!-- <iframe id="ifr" src="index-sq-tc.html"></iframe>-->
+
+    </div>
+
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script>
         var symbol = "R_100";
@@ -16,35 +81,48 @@
 
 
         var dps = [];
-        var dataLength = 60;
+        var dataLength = 100;
         var chart = new CanvasJS.Chart("chartContainer", {
-            theme: "light1", // "light1", "light2", "dark1", "dark2"
+            theme: "light2", // "light1", "light2", "dark1", "dark2"
             animationEnabled: true,
+            backgroundColor: "#020d1c",
+           /* backgroundColor: "#041220",
+           backgroundColor: "#021624", 
+             backgroundColor: "#041220",*/
             data: [{
                 type: "line",
                 dataPoints: dps
             }],
             axisY: {
+                gridColor: "white",
                 gridDashType: "dot",
-                gridThickness: 1,
-                labelFontSize: 12
+                gridThickness: 0.4,
+                labelFontSize: 12,
+
             },
             axisX: {
+                gridColor: "white",
                 gridDashType: "dot",
-                gridThickness: 0,
-                labelFontSize: 12
+                gridThickness: 0.4,
+                labelFontSize: 12,
+                tickColor: "#293F56",
+                lineColor:"#293F56"
+                /*labelFontColor: "red"*/
             }
         });
 
 
         var xval = 1;
         var yval = 1;
+        //var colorline = "";
+        function drawOddEven(yv, dg, mcolor, lcolor) {
 
-        function drawOddEven(yv, dg, mcolor,lcolor) {
             if (dg % 2 == 0) {
                 yval += yv;
+                // colorline = "green"
             } else {
                 yval -= yv;
+                //colorline = "red"
             }
 
             dps.push({
@@ -57,7 +135,12 @@
                 markerSize: 6,
                 markerType: "circle",
                 markerColor: mcolor,
-                // lineColor: "green",
+               /* lineColor: "#83aad9", 
+                 lineColor: "#22BBE0",
+                 lineColor: "#1BB0E0", */
+                 lineColor: "#3399ff", 
+                lineDashType: "shortDot",
+                lineThickness: 0.3
             });
             xval += 1;
 
@@ -69,34 +152,34 @@
 
         ws.onmessage = function (msg) {
             var data = JSON.parse(msg.data);
-            var digit = Number(data.tick.quote).toFixed(decimals).slice(-1); 
+            var digit = Number(data.tick.quote).toFixed(decimals).slice(-1);
             // console.log(digit);
 
             if (digit % 2 == 0) {
                 if (digit == 0) {
-                    drawOddEven(1, digit, "#55af11", "#008c20");
+                    drawOddEven(1, digit, "#55af11", "#01a501");
                 } else if (digit == 2) {
-                    drawOddEven(2, digit, "#55af11", "#008c20");
+                    drawOddEven(2, digit, "#55af11", "#01a501");
                 } else if (digit == 4) {
-                    drawOddEven(3, digit, "#55af11", "#008c20");
+                    drawOddEven(3, digit, "#55af11", "#01a501");
                 } else if (digit == 6) {
-                    drawOddEven(4, digit, "#55af11", "#008c20");
+                    drawOddEven(4, digit, "#55af11", "#01a501");
                 } else if (digit == 8) {
-                    drawOddEven(5, digit, "#55af11", "#008c20");
+                    drawOddEven(5, digit, "#55af11", "#01a501");
                 }
 
             } else {
                 if (digit == 1) {
-                    drawOddEven(1, digit,"#f95734", "red");
+                    drawOddEven(1, digit, "#f95734", "#f74117");
                 } else if (digit == 3) {
-                    drawOddEven(2, digit,"#f95734", "red");
+                    drawOddEven(2, digit, "#f95734", "#f74117");
                 }
                 else if (digit == 5) {
-                    drawOddEven(3, digit,"#f95734", "red");
+                    drawOddEven(3, digit, "#f95734", "#f74117");
                 } else if (digit == 7) {
-                    drawOddEven(4, digit,"#f95734", "red");
+                    drawOddEven(4, digit, "#f95734", "#f74117");
                 } else if (digit == 9) {
-                    drawOddEven(5, digit,"#f95734", "red");
+                    drawOddEven(5, digit, "#f95734", "#f74117");
                 }
             }
         }
