--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <title>EO Chart Defi V100</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
     <style>
         html,
         * {
